# OpenSheet1

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: build.yml  codeql.yml  nightly.yml  pr-validation.yml  windows.yml
addons/plugins/data_cleaner/: main.py  plugin.json
addons/plugins/hello_plugin/: main.py  plugin.json
addons/plugins/stats_plugin/: CMakeLists.txt  stats_plugin.cpp  stats_plugin.h
addons/templates/: budget_tracker.opensheet.json  invoice_template.opensheet.json  project_tracker.opensheet.json  sales_report.opensheet.json
cmake/: CompilerWarnings.cmake  FindQt6.cmake  OpenSheetConfig.cmake  Sanitizers.cmake
config/: opensheet.json
docs/: API.md  ARCHITECTURE.md  BUILD.md  FORMULAS.md  PLUGINS.md
installer/linux/: build_appimage.sh  io.opensheet.OpenSheet.metainfo.xml  opensheet.desktop  opensheet.spec
installer/macos/: Info.plist  build_dmg.sh
installer/windows/: opensheet.iss
localization/de-de/: strings.json
localization/en-us/: strings.json
localization/es-es/: strings.json
localization/fr-fr/: strings.json
localization/ja-jp/: strings.json
office/charts/: CMakeLists.txt  chart_base.cpp  chart_base.h
office/core/: CMakeLists.txt  crash_recovery.h  file_manager.h  settings_manager.h
office/core/file_system/: csv_reader.cpp  csv_reader.h  opensheet_format.cpp  opensheet_format.h  xlsx_reader.h
office/engine/: CMakeLists.txt  auto_fill.cpp  auto_fill.h  cell.cpp  cell.h  cell_range.cpp  cell_range.h  data_validation.cpp  data_validation.h  dependency_graph.cpp  dependency_graph.h  formula_parser.cpp  formula_parser.h  named_ranges.cpp  named_ranges.h  number_formatter.cpp  number_formatter.h  pivot_table.cpp  pivot_table.h  recalc_engine.cpp  recalc_engine.h  sheet.cpp  sheet.h  undo_commands.h  workbook.cpp  workbook.h
office/formulas/: CMakeLists.txt  formula_registry.cpp  formula_registry.h
office/ui/: CMakeLists.txt  cell_format_dialog.cpp  cell_format_dialog.h  chart_dialog.cpp  chart_dialog.h  find_replace_dialog.cpp  find_replace_dialog.h  formula_bar.cpp  formula_bar.h  insert_function_dialog.cpp  insert_function_dialog.h  main_window.cpp  main_window.h  ribbon_bar.cpp  ribbon_bar.h  sheet_tabs.cpp  sheet_tabs.h  side_panel.cpp  side_panel.h  spreadsheet_view.cpp  spreadsheet_view.h  status_bar.cpp  status_bar.h
plugins/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h
resources/: resources.qrc
resources/icons/: README.md
tests/: CMakeLists.txt  test_cell.cpp  test_charts.cpp  test_csv.cpp  test_dependency_graph.cpp  test_engine.cpp  test_formula_parser.cpp  test_opensheet_format.cpp  test_sheet.cpp  test_workbook.cpp  test_xlsx.cpp
themes/dark/: style.qss
themes/light/: style.qss
